@@ -1,3 +1,4 @@
+2017-03-21 Added changes to PieChart module
 2017-03-21 Changed getting parent chapter
 2017-03-16 Added missing labels
 2017-03-16 Added full screen mode and disable full screen property in YouTube module
